--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,11 @@ android {
 
     buildFeatures {
         viewBinding true
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.4.6"
     }
 
     defaultConfig {
@@ -50,7 +55,17 @@ dependencies {
     def core_version = "1.10.1"
     def nav_version = "2.6.0"
     def dagger_version = "2.46.1"
+    def activity_version = "1.7.2"
+    def composeBom = platform('androidx.compose:compose-bom:2023.05.01')
 
+    implementation composeBom
+    androidTestImplementation composeBom
+    implementation "androidx.activity:activity-ktx:$activity_version"
+    implementation "androidx.activity:activity-compose:$activity_version"
+
+    implementation 'androidx.compose.ui:ui-tooling-preview'
+    debugImplementation 'androidx.compose.ui:ui-tooling'
+    implementation 'androidx.compose.material3:material3'
     implementation "androidx.core:core-ktx:$core_version"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
